[feat] 2_ Style Update

--- a/FrontEnd/src/app/lista-usuarios/lista-usuarios.component.html
+++ b/FrontEnd/src/app/lista-usuarios/lista-usuarios.component.html
@@ -9,7 +9,7 @@
       <li><a href="#">CSS</a></li>
       <li><a href="#">JavaScript</a></li>
     </ul>
-    <button class="buscar-perfil">BUSCAR</button>
+    <button class="btn-perfil lista">BUSCAR</button>
   </div>
 </div>
 
