--- a/FrontEnd/src/app/lista-usuarios/lista-usuarios.component.scss
+++ b/FrontEnd/src/app/lista-usuarios/lista-usuarios.component.scss
@@ -22,15 +22,7 @@ tr {
 .caret{
   right:10px;
 }
-.buscar-perfil {
-  color: white;
-  background: black;
-  border-radius: 3px;
-  border: 0px;
-  width: 25%;
-}
 
-.buscar-perfil:hover{
-  background: cyan;
-  color: black;
+.lista{
+  width: 25%;
 }
