[feat] 3_ Registrar usuario func & backend usuer controller

--- a/FrontEnd/src/app/registrar-usuario/registrar-usuario.component.html
+++ b/FrontEnd/src/app/registrar-usuario/registrar-usuario.component.html
@@ -11,37 +11,33 @@
       <!-- ____________Crear contraseña__________ -->
       <div class="pssw-container">
         <div class="form-group">
-          <input type="text" class="form-control pssw" id="pssw" [(ngModel)]="usuario.pssw" required name="pssw"
-            required minlength="6" maxlength="20" placeholder="Contraseña" #nombre="ngModel">
+          <input type="password" class="form-control pssw" id="pssw" [(ngModel)]="usuario.pssw" required name="pssw"
+            required minlength="6" maxlength="20" placeholder="Contraseña" #pssw="ngModel">
         </div>
         <div class="form-group">
-          <input type="text" class="form-control pssw" id="pssw" [(ngModel)]="usuario.pssw" required name="pssw"
-            required minlength="6" maxlength="20" placeholder="Confirmar Contraseña" #nombre="ngModel">
+          <input type="password" class="form-control pssw" id="confirm-pssw" [(ngModel)]="confirmPssw" required
+            name="confirmPssw" required minlength="6" maxlength="20" placeholder="Confirmar Contraseña">
         </div>
       </div>
       <!-- ___________ Email __________ -->
       <div class="form-group">
-        <input type="text" class="form-control" id="email" [(ngModel)]="usuario.usuario" required name="email" required
-          minlength="4" maxlength="10" placeholder="Correo electrónico" #nombre="ngModel">
+        <input type="email" class="form-control" id="email" [(ngModel)]="usuario.email" required name="email" required
+          minlength="30" maxlength="35" placeholder="Correo electrónico" #email="ngModel">
       </div>
 
       <!-- ____________Perfil__________ -->
       <div class="form-group">
-        <div class="dropdown-crear">
-          <button class="btn dropdown-toggle crear-dropdown" type="button" data-toggle="dropdown">
-            Perfil
-            <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a href="#">HTML</a></li>
-            <li><a href="#">CSS</a></li>
-            <li><a href="#">JavaScript</a></li>
-          </ul>
-        </div>
+        <select class="form-control" id="perfil" [(ngModel)]="usuario.perfil" name="perfil" required>
+          <option value="Seleccionar perfil" disabled selected value="undefined">Seleccionar perfil<i class="bi bi-caret-down-fill"></i></option>
+          <option value="Administrador" >Administrador</option>
+          <option value="Coordinador">Coordinador</option>
+          <option value="Invitado">Invitado</option>
+        </select>
+
       </div>
       <!-- ____________Crear__________ -->
       <div class="btn-crear-container">
-        <button class="btn-perfil crear"> CREAR </button>
+        <button class="btn btn-perfil crear"> CREAR </button>
       </div>
     </form>
   </div>
