--- a/FrontEnd/src/app/registrar-usuario/registrar-usuario.component.html
+++ b/FrontEnd/src/app/registrar-usuario/registrar-usuario.component.html
@@ -28,7 +28,7 @@
       <!-- ____________Perfil__________ -->
       <div class="form-group">
         <select class="form-control" id="perfil" [(ngModel)]="usuario.perfil" name="perfil" required>
-          <option value="Seleccionar perfil" disabled selected value="undefined">Seleccionar perfil<i class="bi bi-caret-down-fill"></i></option>
+          <option value="Seleccionar perfil" disabled selected value="undefined">Seleccionar perfil</option>
           <option value="Administrador" >Administrador</option>
           <option value="Coordinador">Coordinador</option>
           <option value="Invitado">Invitado</option>
